[metadata]
name = metaoptim
version = 0.0.1
author = Harry Phillip Myburgh
author_email = harry.myburgh@gmail.com
description = Metaheuristic optimisation algorithms and optimisation benchmark functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harrymyburgh/metaoptim
project_urls =
    Bug Tracker = https://github.com/harrymyburgh/metaoptim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy>=1.23.5
    numba>=0.56.4
    tqdm>=4.64.1
